# soga-panel

./: .gitignore  AGENTS.md  LICENSE  README.md  deploy.sh
docs/: backend-api.md  backend-overview.md  crisp-integration.md  deployment-guide.md  frontend-overview.md  (+4 more)
server-rs/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
server-rs/db/: insert_package_data.mysql.sql  insert_required_data.mysql.sql  schema.mysql.sql
server-rs/db/migrations/: 001_add_telegram_notifications.sql  002_add_telegram_bind_webhook.sql  006_create_node_report_events.sql
server-rs/scripts/: build-binaries.sh
server-rs/scripts/.linkers/: zig-aarch64-unknown-linux-musl.sh  zig-x86_64-unknown-linux-musl.sh
server-rs/src/: cache.rs  config.rs  crypto.rs  etag.rs  jobs.rs  mail.rs  main.rs  message_queue.rs  passkey.rs  payment.rs  referral.rs  response.rs  routes.rs  shared_ids.rs  state.rs  subscription.rs  totp.rs
server-rs/src/routes/: announcement.rs  auth.rs  node.rs  payment_callback.rs  payment_config.rs  rebate.rs  store.rs  subscription.rs  telegram.rs  user.rs  wallet.rs
server-rs/src/routes/admin/: announcements.rs  audit.rs  cache.rs  coupons.rs  dns_rules.rs  gift_card_batches.rs  gift_cards.rs  login_logs.rs  maintenance.rs  mod.rs  nodes.rs  online_ips.rs  packages.rs  purchase_records.rs  rebate.rs  recharge_records.rs  shared_ids.rs  subscription_logs.rs  system_configs.rs  task.rs  tickets.rs  traffic.rs  users.rs  whitelist.rs  xray_rules.rs
server-rs/src/templates/: clashTemplate.json  email_templates.rs  mod.rs  singboxTemplate.json  surgeTemplate.conf
(+315 files in other folders)
