[package]
name = "soga-panel-server"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
base64 = "0.22.1"
data-encoding = "2.6.0"
aes-gcm = "0.10.3"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
lettre = { version = "0.11.15", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
md5 = "0.7.0"
rand = "0.8.5"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9.8"
p256 = { version = "0.13.2", features = ["ecdsa"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
sha2 = { version = "0.10.8", features = ["oid"] }
sqlx = { version = "0.8.6", default-features = false, features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
uuid = { version = "1.12.1", features = ["v4"] }
